# multi-agent-opinion-pooling-by-voting-for-bins-simulations

./: Cargo.toml  README.md
src/: graphs.rs  input.rs  main.rs  pooling.rs  scoring.rs  setting.rs
src/pooling/: convex_pooling.rs  epistemic_voting.rs  linear_pooling.rs  logarithmic_pooling.rs  voting_for_bins.rs
src/setting/: beliefs.rs  bins.rs
src/setting/beliefs/: imprecise.rs  precise.rs
src/setting/bins/: bins.rs
